--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
 # testing
 /coverage
 
-# production
-/build
+# webpack output
+/demo/build
 
 # bucklescript
 /lib
