--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bs-bastet": "^1.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-select": "^3.1.0",
     "reason-react": "^0.9.1",
     "relude": "^0.63.1",
     "relude-reason-react": "^0.10.0"
