--- a/bsconfig.json
+++ b/bsconfig.json
@@ -25,11 +25,13 @@
     "in-source": true
   },
   "bs-dependencies": [
-    "reason-react",
-    "bs-webapi",
     "bs-bastet",
     "bs-decode",
+    "bs-fetch",
+    "bs-webapi",
+    "reason-react",
     "relude",
+    "relude-fetch",
     "relude-reason-react"
   ],
   "bs-dev-dependencies": ["@glennsl/bs-jest", "bs-react-testing-library"],
