Style search filter via bs-css

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -25,6 +25,8 @@
     "in-source": true
   },
   "bs-dependencies": [
+    "bs-css",
+    "bs-css-emotion",
     "bs-bastet",
     "bs-decode",
     "bs-fetch",
