--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "bs-bastet": "^1.2.5",
+    "bs-css-emotion": "^1.2.0",
     "bs-decode": "^0.11.2",
     "bs-fetch": "^0.6.1",
     "react": "^16.13.1",
