--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.2.0",
     "css-loader": "^3.6.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "style-loader": "^1.2.1",
@@ -41,6 +42,7 @@
     "bs-css-emotion": "^1.2.0",
     "bs-decode": "^0.11.2",
     "bs-fetch": "^0.6.1",
+    "flag-icon-css": "^3.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-select": "^3.1.0",
