--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@glennsl/bs-jest": "^0.5.1",
+    "@svgr/webpack": "^5.4.0",
     "bs-platform": "^8.0.3",
     "bs-react-testing-library": "^0.7.3",
     "bs-webapi": "^0.17.1",
