--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@glennsl/bs-jest": "^0.5.1",
+    "@testing-library/dom": "^7.21.1",
+    "@testing-library/react": "^10.4.7",
+    "@testing-library/user-event": "^12.0.11",
     "bs-platform": "^8.0.3",
     "bs-react-testing-library": "^0.7.3",
     "bs-webapi": "^0.17.1",
