--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "^10.4.7",
     "@testing-library/user-event": "^12.0.11",
     "bs-dom-testing-library": "^0.6.2",
+    "bs-jest-dom": "^4.1.1",
     "bs-platform": "^8.0.3",
     "bs-react-testing-library": "^0.7.3",
     "bs-webapi": "^0.17.1",
